# coremotion-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: accelerometer.rs
src/: lib.rs
